--- a/src/LarpManager/Views/stock/objet/list.twig
+++ b/src/LarpManager/Views/stock/objet/list.twig
@@ -8,7 +8,7 @@
 			<h4 class="list-group-item-heading">
 				{{ objet.code }} 
 			</h4>
-			{{ objet.nom }} : {{ objet.description }}
+			<p>{{ objet.nom }} : {{ objet.description }}</p>
 		</a>
 	{%  endfor %}
 </ul>
