Correction nombre d'objet dans une localisation, correction mise à jour rangement.

--- a/src/LarpManager/Views/stock/index.twig
+++ b/src/LarpManager/Views/stock/index.twig
@@ -82,7 +82,7 @@
 		{{ include("stock/etat/list.twig", {'etats' : etats}) }}
 		{{ include("stock/tag/list.twig", {'tags' : tags}) }}
 		{{ include("stock/localisation/list.twig", {'localisations' : localisations}) }}
-		{{ include("stock/rangement/list.twig", {'localisations' : rangements}) }}
+		{{ include("stock/rangement/list.twig", {'rangements' : rangements}) }}
 		{{ include("stock/proprietaire/list.twig", {'proprietaires' : proprietaires}) }}
 	</div>
 </div>
