--- a/src/LarpManager/Views/stock/rangement/update.twig
+++ b/src/LarpManager/Views/stock/rangement/update.twig
@@ -9,7 +9,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12 col-md-8">
-				{{ include("stock/rangement/form.twig",{'action': path('stock_localisation_update', {index:rangement.id} ), 'form' : form}) }}
+				{{ include("stock/rangement/form.twig",{'action': path('stock_rangement_update', {index:rangement.id} ), 'form' : form}) }}
 			</div>
 		</div>
 	</div>
