--- a/src/LarpManager/Views/stock/objet/add.twig
+++ b/src/LarpManager/Views/stock/objet/add.twig
@@ -9,7 +9,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12 col-md-8">
-				{{ include("stock/objet/form.twig",{'action': path('stock_objet_add'), 'form' : form}) }}
+				{{ include("stock/objet/fragment/form.twig",{'action': path('stock_objet_add'), 'form' : form}) }}
 			</div>
 		</div>
 	</div>
