--- a/src/LarpManager/Views/stock/objet/update.twig
+++ b/src/LarpManager/Views/stock/objet/update.twig
@@ -12,7 +12,7 @@
         {% endif %}
 		<div class="row">
 			<div class="col-xs-12 col-md-8">
-				{{ include("stock/objet/form.twig",{'action': path('stock_objet_update',{'index':objet.id}), 'form' : form}) }}
+				{{ include("stock/objet/fragment/form.twig",{'action': path('stock_objet_update',{'index':objet.id}), 'form' : form}) }}
 			</div>
 		</div>
 	</div>
