--- a/src/LarpManager/Views/stock/objet/list.twig
+++ b/src/LarpManager/Views/stock/objet/list.twig
@@ -1,14 +1,17 @@
-<ul class="list-group">
-	<a href="{{ path('stock_objet_add') }}" class="list-group-item active">
-		<span class="badge"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></span>
-		<h4 class="list-group-item-heading">Ajouter un objet</h4>
-	</a>
-	{%  for objet in objets %}
-		<a href="{{ path('stock_objet_detail', {index: objet.id}) }}" class="list-group-item">
-			<h4 class="list-group-item-heading">
-				{{ objet.code }} 
-			</h4>
-			<p>{{ objet.nom }} : {{ objet.description }}</p>
-		</a>
-	{%  endfor %}
-</ul>
+{% extends "layout.twig" %}
+
+{% block content %}
+
+	<div class="page-header">
+		<h1>{{ titre }}</h1>
+	</div>
+
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-xs-12 col-md-8">
+				{{ include("stock/objet/fragment/list.twig",{'objets': objets, 'add': false}) }}
+			</div>
+		</div>
+	</div>
+	
+{% endblock content %}
