--- a/src/LarpManager/Views/stock/objet/index.twig
+++ b/src/LarpManager/Views/stock/objet/index.twig
@@ -11,157 +11,77 @@
 	<nav class="navbar navbar-default">
   		<div class="container-fluid">
   		
-	  		 <form class="navbar-form navbar-left" role="search">
-				<div class="form-group">
-					<div class="btn-group" role="group" aria-label="...">
-						<div class="input-group">
-							<select class="form-control" id="searchType">
-								<option value="nom">Nom</option>
-								<option value="code">Code</option>
-							</select>
-						 	<div class="input-group-btn"></div>
-					    	<input id="search" type="text" class="form-control" placeholder="Search">
-					    	<span class="input-group-btn">
-					    		<button class="btn btn-default" id="doSearch" type="button"><span class="icon fa fa-search"></span></button>
-					    	</span>
-					    </div>
-				    </div>
+	  		<form action="{{ path(pagination.route, pagination.route_params|merge({'page': pagination.page})) }}" method="POST" {{ form_enctype(form) }}>
+				{% form_theme form 'Form/bootstrap_3_layout.html.twig' %}
+				{{ form(form) }}
+			</form>
+			
+			<div class="form-group">
+				<div class="btn-group" role="group" aria-label="...">
+					<a href={{ path('stock_objet_index') }} class="btn btn-default"><span class="icon fa fa-refresh"></span></a>
+				 	<a href={{ path('stock_objet_add') }} class="btn btn-default"><span class="icon fa fa-plus"></span></a>
 				</div>
 				
-				<div class="form-group">
-					<div class="btn-group" role="group" aria-label="...">
-					  <button id="reset" type="button" class="btn btn-default"><span class="icon fa fa-refresh"></span></button>
-					  <button id="add" type="button" class="btn btn-default"><span class="icon fa fa-plus"></span></button>
-					</div>
+
+				<div class="btn-group" role="group" aria-label="...">
+				  	<ul class="pagination">
+				    	<li {% if pagination.page <= 1 %} class="disabled" {%  endif %}>
+				    		<a href="{{ path(pagination.route, pagination.route_params|merge({'page': 1})) }}" aria-label="First"><span aria-hidden="true"><<</span></a>
+				    	</li>
+				    	
+				  		<li {% if pagination.page <= 1 %} class="disabled" {%  endif %}>    		
+							<a href="{{ path(pagination.route, pagination.route_params|merge({'page': pagination.page-1})) }}" aria-label="Previous"><span aria-hidden="true"><</span></a>
+				        </li>
+				
+				        {#display p numbers only from p-4 to p+4 but don't go <1 or >pages_count#}
+				        {% for p in range(max(pagination.page-4, 1), min(pagination.page+4, pagination.pages_count)) %}
+				            <li {% if p == pagination.page %} class="active"{% endif %}>
+				            	<a href="{{ path(pagination.route, pagination.route_params|merge({'page': p})) }}">{{ p }}</a>
+							</li>
+				        {% endfor %}
+				        
+				        
+				        <li {% if pagination.page<=pagination.pages_count %} class="disabled"{% endif %}>
+				        	<a href="{{ path(pagination.route,pagination.route_params|merge({'page': pagination.page+1})) }}">></a>
+				         </li>
+				         <li {% if pagination.page<=pagination.pages_count %} class="disabled"{% endif %}>
+				          	<a href="{{ path(pagination.route,pagination.route_params|merge({'page': pagination.pages_count})) }}">>></a>
+				         </li>    
+					</ul>
 				</div>
-	      	</form>
-      	  		
+				
+			</div>
+						
   		</div>
   	</nav>
   	
-  	<nav>
-	  <ul class="pager">
-	    <li><a class="previous" href="#">Previous</a></li>
-	    <li><span class="page"></span></li>
-	    <li><a class="next" href="#">Next</a></li>
-	  </ul>
-	</nav>
-	
-	<div id="liste_objet" class="row"></div>
-	
-	<nav>
-	  <ul class="pager">
-	    <li><a class="previous" href="#">Previous</a></li>
-	    <li><span class="page"></span></li>
-	    <li><a class="next" href="#">Next</a></li>
-	  </ul>
-	</nav>
+
+  		
+	<div class="row" >
+		{% for objet in objets %}
+		<div class="col-xs-12 col-sm-6 col-md-3">
+  			<div class="thumbnail">	
+	   			{% if objet.photo %}
+	    			<img src="{{ path('stock_objet_photo',{index: objet.id}) }}" alt="{{ objet.photo.name }}" class="img-responsive" />
+				{% endif %}
+				<div class="caption">
+					<h3>{{ objet.code }}&nbsp;<small>{{ objet.nom }}</small></h3>
+			        <p>{{ objet.description }}</p>
+			        
+			        <div class="btn-group" role="group" aria-label="...">
+			        	<a href="{{ path('stock_objet_detail', {index: objet.id}) }}" class="btn btn-primary" role="button">Voir</a>
+			        	<a href="{{ path('stock_objet_update', {index: objet.id}) }}" class="btn btn-default" role="button">Modifier</a>
+			        	<a href="{{ path('stock_objet_clone', {index: objet.id}) }}" class="btn btn-default" role="button">Cloner</a>
+			        </div>
+			        
+				</div>
+			</div>
+		</div>
+  		{% endfor %}
+  	</div>
 			
 {% endblock content %}
 
-{% block javascript %}
-	{{ parent() }}
-	<script>
-
-	var paramDefault = {
-			'current' : 1,
-			'rowCount' : 20,
-			'searchPhrase' : '',
-			'searchType' : '',
-			'sort': {},
-			'thumbnail' : true
-		}; 
-	var param = $.extend({},paramDefault);
-
-	var result = null;
-	
-	var search_timeout = null;
-	var myXHR = null;
-	
-	var ajax_request = function() {
-		if(myXHR) myXHR.abort();
-		 myXHR = $.ajax({
-			url: '{{ path('stock_objet_index') }}',
-			method: 'POST',
-			dataType: 'json',
-			data: param,
-			success : function(data) {
-				result = data;
-				
-				if ( result['total'] != 0 ) {
-					result['pageCount'] = Math.ceil(result['total'] / result['rowCount']);
-					$(".page").html(result['current'] + "/" + result['pageCount']);
-					$('#liste_objet').html(data.thumbnails);
-				}
-				else {
-					result['pageCount'] = 0;
-					$('#liste_objet').html("<p>Aucun résultat, désolé</p>");
-					
-				}
-			},
-			error : function(err) {}
-		});
-	};
-		
-	$(document).ready(function() {
-
-		ajax_request();
-
-		$("form").on('submit', function() {
-			return false;
-		});
-		
-		$("#searchType").on('change', function(e) {
-			param['searchType'] = $(this).val();
-		});
-		
-		$("#search").on('keyup', function(e) {
-			e.preventDefault();
-			clearTimeout(search_timeout);
-			
-			param['searchPhrase'] = this.value;
-				
-			if (param['searchPhrase'].length >= 3) {
-				search_timeout = setTimeout(ajax_request(), 250);
-			}
-			return false;
-		});
-
-		$("#doSearch").on('click', function(e) {
-			param['searchPhrase'] = $("#search").val();
-			param['searchType'] = $("#searchType").val();
-			ajax_request();
-			return false;
-		});
-
-		$("#reset").on('click', function(e) {
-			param = $.extend({},paramDefault);
-			ajax_request();
-			return false;
-		});
-
-		$("#add").on('click', function(e) {
-			window.location.href = "{{ path('stock_objet_add') }}";
-		});
-
-		$(".next").on('click', function(e) {
-			if ( param['current'] != result['pageCount'] ) {
-				param['current'] += 1;
-				ajax_request();
-			}
-			return false;
-		});
-
-		$(".previous").on('click', function(e) {
-			if ( param['current'] != 1 ) {
-				param['current'] -= 1;
-				ajax_request();
-			}
-			return false;
-		});
-	});
-	</script>
-{% endblock javascript %}
 
 
 
