--- a/src/LarpManager/Views/stock/objet/list.twig
+++ b/src/LarpManager/Views/stock/objet/list.twig
@@ -6,6 +6,16 @@
 		<h1>{{ titre }}</h1>
 	</div>
 
+	<div class="btn-group" role="group" aria-label="...">
+		{{ include("stock/objet/fragment/pagination.twig",{'pagination': pagination}) }}
+	</div>
+	
+	<div class="btn-group" role="group" aria-label="...">
+		<a href="" aria-label="First">
+		<a href="{{ path(pagination.route, pagination.route_params|merge({'page': 1})) }}" class="btn btn-default"><span class="icon fa fa-refresh"></span></a>
+		<a href="{{ path('stock_objet_add') }}" class="btn btn-default"><span class="icon fa fa-plus"></span></a>
+	</div>
+				
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-xs-12 col-md-8">
