Amélioration de la gestion des listes

--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -26,7 +26,7 @@
 						<li><a href="{{ path('stock_localisation_index') }}">Localisations</a></li>
 						<li><a href="{{ path('stock_rangement_index') }}">Rangements</a></li>
 						<li><a href="{{ path('stock_proprietaire_index') }}">Proprietaires</a></li>
-						<li><a href="{{ path('stock_objet_index') }}">Objets</a></li>
+						<li><a href="{{ path('stock_objet_list',{'page':1}) }}">Objets</a></li>
 						<li><a href="{{ path('stock_objet_export') }}">Exporter</a></li>
 					</ul>
 				</li>
