--- a/src/LarpManager/Views/stock/objet/list.twig
+++ b/src/LarpManager/Views/stock/objet/list.twig
@@ -18,7 +18,7 @@
 				
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-xs-12 col-md-8">
+			<div class="col-xs-12 ">
 				{{ include("stock/objet/fragment/list.twig",{'objets': objets, 'add': false}) }}
 			</div>
 		</div>
