--- a/src/LarpManager/Views/Classe/fragment/list.twig
+++ b/src/LarpManager/Views/Classe/fragment/list.twig
@@ -8,25 +8,45 @@
 	{%  for classe in classes %}
 	<li class="list-group-item">
 		<h4 class="list-group-item-heading">
-			{{ classe.nom }}
+			{{ classe.label }}
 		</h4>
 		<p class="list-group-item-text">
-			<div class="pull-right btn-group" role="group" aria-label="...">
-				<a href="{{ path('classe.detail', {index: classe.id}) }}" class="btn btn-primary" role="button">Voir</a>
-			    <a href="{{ path('classe.update', {index: classe.id}) }}" class="btn btn-default" role="button">Modifier</a>
-			</div>
-			
+
 			{% if classe.description %}
 				<p class="text-info">{{ classe.description }}</p>
 			{% else %}
 				<p class="text-warning">Attention, cette classe n'a pas description</p>
 			{%  endif %}
-		</p>
+			
+			{% if classe.competenceFavorites|length != 0 %}
+				<p class="text-info">
+					<strong>Compétences favorites : </strong>{{ classe.competenceFavorites|join(', ') }}
+				</p>
+			{% else %}
+				<p class="text-warning">Attention, cette classe n'a pas de compétences favorites</p>
+			{% endif %}
 		
-		<p class="list-group-item-text">
-			<small>Créé par {{ classe.creator.username }} le {{ classe.creationDate|date('Y-m-d H:i:s') }}. Dernière mise à jour le {{ classe.updateDate|date('Y-m-d H:i:s') }}</small>
-		</p>
+			{% if classe.competenceNormales|length != 0 %}
+				<p class="text-info">
+					<strong>Compétences normales : </strong>{{ classe.competenceNormales|join(', ') }}
+				</p>
+			{% else %}
+				<p class="list-group-item-text text-warning">Attention, cette classe n'a pas de compétences normales</p>
+			{% endif %}
 		
+			{% if classe.competenceCreations|length != 0 %}
+				<p class="list-group-item-text text-info">
+					<strong>Compétences acquises à la création : </strong>{{ classe.competenceCreations|join(', ') }}
+				</p>
+			{% else %}
+				<p class="list-group-item-text text-warning">Attention, cette classe n'a pas de compétences acquises à la créations</p>
+			{% endif %}
+		
+			<div class="btn-group" role="group" aria-label="...">
+				<a href="{{ path('classe.detail', {index: classe.id}) }}" class="btn btn-primary" role="button">Voir</a>
+			    <a href="{{ path('classe.update', {index: classe.id}) }}" class="btn btn-default" role="button">Modifier</a>
+			</div>
+		</p>
 	</li>
 	{%  endfor %}
 </ul>
