Ajout de la gestion des groupes

--- a/src/LarpManager/Views/classe/detail.twig
+++ b/src/LarpManager/Views/classe/detail.twig
@@ -1,5 +1,7 @@
 {% extends "layout.twig" %}
 
+{% block title %}Classes{% endblock title %}
+
 {% block content %}
 
 <a href="{{ path("classe") }}">Retour à la liste des classes</a>
