--- a/src/LarpManager/Views/competence/add.twig
+++ b/src/LarpManager/Views/competence/add.twig
@@ -1,5 +1,7 @@
 {% extends "layout.twig" %}
 
+{% block title %}Compétences{% endblock title %}
+
 {% block content %}
 
 	<div class="page-header">
