--- a/src/LarpManager/Views/competence/update.twig
+++ b/src/LarpManager/Views/competence/update.twig
@@ -1,5 +1,7 @@
 {% extends "layout.twig" %}
 
+{% block title %}Compétences{% endblock title %}
+
 {% block content %}
 
 	<a href="{{ path("competence") }}">Retour à la liste des compétences</a>
