--- a/src/LarpManager/Views/layout.twig
+++ b/src/LarpManager/Views/layout.twig
@@ -13,7 +13,7 @@
             <link rel="stylesheet" href="{{ app.request.basepath }}/css/bootstrap.min.css" />
             <link rel="stylesheet" href="{{ app.request.basepath }}/css/bootstrap-theme.min.css" />
             
-            <title>{% block title %}{% endblock title %} - LarpManager</title>
+            <title>LarpManager - {% block title %}{% endblock title %}</title>
         {% endblock head %}
     </head>
     <body>
