--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -22,6 +22,7 @@
 					<ul class="dropdown-menu">
 						<li><a href="{{ path('pays') }}">Pays</a></li>
 						<li><a href="{{ path('region') }}">Régions</a></li>
+						<li><a href="{{ path('groupe') }}">Groupes</a></li>
 					</ul>
 				</li>
 			{% endif %}
