--- a/src/LarpManager/Views/niveau/update.twig
+++ b/src/LarpManager/Views/niveau/update.twig
@@ -1,5 +1,7 @@
 {% extends "layout.twig" %}
 
+{% block title %}Niveaux{% endblock title %}
+
 {% block content %}
 
 	<a href="{{ path("niveau") }}">Retour à la liste des niveaux</a>
