--- a/src/LarpManager/Views/groupe/index.twig
+++ b/src/LarpManager/Views/groupe/index.twig
@@ -1,5 +1,7 @@
 {% extends "layout.twig" %}
 
+{% block title %}Groupes{% endblock title %}
+
 {% block content %}
 
 	<div class="page-header">
@@ -10,7 +12,7 @@
 
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-xs-12 col-md-8">
+			<div class="col-xs-12 col-md-12">
 			
 				{% if last_add|length == 0 %}
 					<div class="panel panel-warning">
@@ -27,13 +29,15 @@
 							</ul>
 						</div>
 					</div>
-				{% endif %} 
-
-				<h3>Liste des 10 derniers groupes ajoutés.</h3>
-				{{ include("groupe/fragment/list.twig", {'groupes' : last_add, 'add' : true}) }}
+				{% endif %} 				
 			</div>
+
+		<div class="col-xs-12 col-md-12">
+			<h3>Liste des groupes.</h3>
+			{{ include("groupe/fragment/list.twig", {'groupes' : last_add, 'add' : true}) }}
 		</div>
 	</div>
+</div>
 
 {% endblock content %}
 
