--- a/src/LarpManager/Views/pays/detail.twig
+++ b/src/LarpManager/Views/pays/detail.twig
@@ -1,7 +1,8 @@
 {% extends "layout.twig" %}
 
-{% block content %}
+{% block title %}Pays{% endblock title %}
 
+{% block content %}
 
 <div class="page-header">
 <h1>
@@ -9,18 +10,61 @@
 </h1>
 </div>
 
-<p class="bg-info">Créé par {{ pays.creator.username }} le {{ pays.creationDate|date('Y-m-d H:i:s') }}. Dernière mise à jour le {{ pays.updateDate|date('Y-m-d H:i:s') }}</p>
-<p class="bg-primary">{{ pays.description }}</p>
-
-
-<a href="{{ path('pays.update', {index : pays.id}) }}">Modifier</a>
-<a href="{{ path('pays.detail.export', {index : pays.id}) }}">Exporter</a>
-
-<h3>Liste des régions rattachées à ce pays ({{ pays.regions|length }} régions)</h3>
-<ul>
-{% for region in pays.regions %}
-	<li><a href="{{ path('region.detail',{'index': region.id}) }}">{{ region.nom }}</a></li>
-{% endfor %}
-</ul>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-xs-12 col-md-8">
+			<div class="panel panel-primary">
+  				<div class="panel-heading">
+					{{ pays.nom }}			
+  				</div>
+  				<div class="panel-body">
+  					<div class="list-group">
+		    		
+		    			<div class="list-group-item">
+			    			<h4 class="list-group-item-heading">Description</h4>
+	    					<p class="list-group-item-text">
+	    					{% if not pays.description %}
+	    						<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+	    						Attention, ce pays n'a pas de description.
+	    					{% else %}
+	    						{{ pays.description }}
+	    					{% endif %}
+	    					</p>
+		    			</div>
+		    			
+		    			<div class="list-group-item">
+			    			<h4 class="list-group-item-heading">Liste des régions rattachées à ce pays ({{ pays.regions|length }} régions)</h4>
+		    				<p class="list-group-item-text">
+								<ul>
+								{% for region in pays.regions %}
+									<li><a href="{{ path('region.detail',{'index': region.id}) }}">{{ region.nom }}</a></li>
+								{% endfor %}
+								</ul>
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="panel-footer">
+  					<div class="btn-group" role="group" aria-label="...">
+  						<a  class="btn btn-primary" role="button" href="{{ path('pays.update', {index : pays.id}) }}">Modifier</a>
+						<a  class="btn btn-default" role="button" href="{{ path('pays.detail.export', {index : pays.id}) }}">Exporter</a>
+					</div>
+  				</div>
+  				
+			</div>
+		</div>
+		
+		<div class="col-xs-12 col-md-4">
+			<div class="panel panel-default">
+  				<div class="panel-heading">Informations</div>
+  				<div class="panel-body">
+  					<p>Créé par {{ pays.creator.username }} le {{ pays.creationDate|date('Y-m-d H:i:s') }}.</p>
+  					<p>Dernière mise à jour le {{ pays.updateDate|date('Y-m-d H:i:s') }}</p>
+  				</div>
+			</div>		
+		</div>
+		
+	</div>
+</div>
 
 {% endblock %}
