--- a/src/LarpManager/Views/groupe/fragment/form.twig
+++ b/src/LarpManager/Views/groupe/fragment/form.twig
@@ -30,8 +30,7 @@
 				{{ form_label(form.groupeClasses) }}
 			</div>
 			<div class="panel-body">
-				<p>Composez votre groupe avec une ou plusieurs classes. Ces classes seront disponibles pour les joueurs.
-				</p>
+				<p>Composez votre groupe avec une ou plusieurs classes. Ces classes seront disponibles pour les joueurs.</p>
 			</div>
 			<ul class="list-group groupeClasses" data-prototype="{{ form_widget(form.groupeClasses.vars.prototype)|e }}">
 				<li class="list-group-item">{{ form_row(form.classeOpen) }}</li>
