--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -23,6 +23,7 @@
 						<li><a href="{{ path('pays') }}">Pays</a></li>
 						<li><a href="{{ path('region') }}">Régions</a></li>
 						<li><a href="{{ path('groupe') }}">Groupes</a></li>
+						<li><a href="{{ path('ressource') }}">Ressources</a></li>
 					</ul>
 				</li>
 			{% endif %}
