--- a/src/LarpManager/Views/region/detail.twig
+++ b/src/LarpManager/Views/region/detail.twig
@@ -34,6 +34,20 @@
 		    			</div>
 		    			
 		    			<div class="list-group-item">
+		    				<h4 class="list-group-item-heading">Production</h4>
+		    				<p class="list-group-item-text">
+		    				{{ region.ressources|join(', ') }}
+		    				</p>
+		    			</div>
+		    			
+		    			<div class="list-group-item">
+		    				<h4 class="list-group-item-heading">Groupe</h4>
+		    				<p class="list-group-item-text">
+		    				{{ region.groupes|join(', ') }}
+		    				</p>
+		    			</div>
+		    			
+		    			<div class="list-group-item">
 			    			<h4 class="list-group-item-heading">Jeu stratégique</h4>
 	    					<p class="list-group-item-text">
 		    					<ul>
