--- a/src/LarpManager/Views/groupe/detail.twig
+++ b/src/LarpManager/Views/groupe/detail.twig
@@ -56,6 +56,15 @@
 		    			</div>
 		    			
 		    			<div class="list-group-item">
+		    				<h4 class="list-group-item-heading">Membres du groupe</h4>
+		    				<p class="list-group-item-text">
+		    					<ul>
+		    						{% if groupe.responsable %}<li><strong>{{ groupe.responsable.username }}</strong>&nbsp;(Responsable du groupe)</li>{% endif %}
+		    					</ul>
+		    				</p>
+		    			</div>
+		    			
+		    			<div class="list-group-item">
 			    			<h4 class="list-group-item-heading">Code</h4>
 	    					<p class="list-group-item-text">
 	    						<strong>{{ groupe.code }}</strong>
