--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -24,6 +24,8 @@
 						<li><a href="{{ path('region') }}">Régions</a></li>
 						<li><a href="{{ path('groupe') }}">Groupes</a></li>
 						<li><a href="{{ path('ressource') }}">Ressources</a></li>
+						<li><a href="{{ path('age') }}">Ages</a></li>
+						<li><a href="{{ path('genre') }}">Genres</a></li>
 					</ul>
 				</li>
 			{% endif %}
